--- a/pyodide-test/index.html
+++ b/pyodide-test/index.html
@@ -7,32 +7,23 @@
 <script src="https://cdn.jsdelivr.net/pyodide/v0.25.1/full/pyodide.js"></script>
 </head>
 <body>
-    <h3>5er Reihe</h3>
     <button onclick="evaluatePython()">Nächster Wert</button>
     <img src="../analog-gauge-reader-working/gauge-4.png" alt="" width="300px">
-    <br />
-    <div id="output"></div>
-    <script>
-        let output = document.getElementById("output");
-        let pyodideReadyPromise = loadPyodide();
-        let multiplier = 0;
-    
-        async function evaluatePython() {
-            let pyodide = await pyodideReadyPromise;
-            multiplier += 1;
-            let code = `
-                def multiply_by_5(x):
-                    return x * 5
+    <script type="text/javascript">
+      async function main() {
+        let pyodide = await loadPyodide();
+        await pyodide.loadPackage("micropip");
+        const micropip = pyodide.pyimport("micropip");
+        await micropip.install("opencv-python");
+        //await micropip.install("numpy as np");
+        //await micropip.install("from matplotlib import pyplot as plt");
 
-                multiply_by_5(${multiplier})
-            `
-            try {
-                let result = pyodide.runPython(code);
-                output.innerHTML += "5 * " + multiplier.toString() + " = " + result.toString() + "<br>";
-            } catch (err) {
-                output.innerHTML = err;
-            }
-        }
+        await pyodide.runPython(`
+        import opencv-python
+        print(opencv-python)
+      `);
+      }
+      main();
     </script>
 </body>
 </html>
